--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-requests
-pandas
-matplotlib
-folium
-streamlit-folium
+streamlit>=1.35
+requests>=2.31
+pandas>=2.2
+matplotlib>=3.8
+folium>=0.16
+streamlit-folium>=0.18
+plotly>=5.21
